# asr

./: .dockerignore  .gitignore  Makefile  README.md  generate_logo.py
backend/: go.mod  go.sum
backend/cmd/admin-api/: main.go
backend/cmd/asr-api/: main.go
backend/cmd/gateway/: main.go
backend/cmd/nlp-api/: main.go
backend/cmd/openapi-real-test/: main.go
backend/cmd/rules-catalog-xlsx/: main.go
backend/configs/: config.example.yaml
backend/migrations/: 001_init_schema.sql  002_workflow_schema.sql  003_meeting_workflow.sql  004_workflow_profile.sql  005_user_workflow_bindings.sql  006_workflow_node_defaults.sql  007_sensitive_dicts.sql  008_filler_dicts.sql  009_app_settings.sql  010_voice_control_workflow_and_command_libs.sql  011_terminology_rules_hotwords.sql  012_language_and_hardware_metadata.sql  013_correction_rule_priority.sql  014_remove_legacy_nonmedical_seeds.sql  015_keep_only_imaging_default_term_dict.sql  016_term_dict_processing_switches.sql  017_meeting_upload_sessions.sql
deploy/: docker-compose.yml
deploy/3d-speaker/: Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  release.sh  requirements.txt
deploy/all-in-one/: Dockerfile  README.md  docker-compose.bundle.yml  docker-compose.yml  nginx.conf  supervisord.conf
deploy/cam++/: Dockerfile  README.md  app.py  build.sh  client_example.py  docker-compose.yml  requirements.txt
deploy/frontend/: Dockerfile
deploy/jusha-asr/: build-release.sh
deploy/jusha-asr-business/: Dockerfile  README.md  docker-compose.bundle.yml  docker-compose.yml  nginx.conf
deploy/nginx/: nginx.conf
deploy/qwen3-asr/: install-normal.sh  pack.sh
desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
desktop-electron/: .gitignore  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop-electron/native/inject-helper/: Cargo.toml  rust-toolchain.toml
desktop-electron/native/inject-helper/src/: lib.rs  main.rs  process_killer.rs  windows_impl.rs
desktop-electron/scripts/: build-helper.mjs  build-main.mjs  build-win.mjs  dev.mjs
desktop-electron/src/: auto-imports.d.ts  env.d.ts  main.ts
desktop/scripts/: build-windows-cross.sh  clang-cl-shim.sh  doctor-windows-cross.sh  sync-version.mjs
desktop/src/: App.vue  auto-imports.d.ts  main.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows-xbuild.conf.json
desktop/src-tauri/capabilities/: desktop.json
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/src/: hotkeys.rs  injector.rs  input_bridge.rs  lib.rs  main.rs  tray.rs
docs/: fama-221-release.md  legacy api.md  old http.py  产品规格书.md  概要设计.md  第一轮提测BUG修复变更记录.md  第二轮提测BUG修复变更记录.md  详细设计.md  输入长度限制.md  部署手册.md
docs/bugs/: 20260609.csv  20260611.csv  ASR评测报告_OpenAPI修复后.xlsx  第一轮测试BUG.csv  第二轮测试BUG.csv
docs/openapi/: README.md
docs/terms/: 00-评分规则与说明.md  01-通用-成像技术与征象.md  05-心血管.md  09-乳腺.md  10-肌骨-骨关节脊柱.md  11-介入与血管造影.md
docs/用户手册/: 01-数据看板.md  02-实时语音识别.md  03-批量转写.md  04-会议纪要.md  05-声纹库.md  06-工作流管理.md  07-节点管理.md  08-应用配置.md  09-术语库与纠错规则.md  10-语气词库.md  11-敏感词库.md  12-控制指令库.md  13-用户管理.md  14-OpenAPI管理.md  15-登录与终端下载.md  16-桌面客户端.md  README.md
frontend/: .env.development.example  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  auto-imports.d.ts  components.d.ts  desktopClientSingleInstance.test.ts  inputLengthLimits.test.ts  main.ts  playwrightConfig.test.ts  vite-env.d.ts
scripts/: build-meta.ts  sync_to_fama.sh
(+438 files in other folders)
