[package]
name = "asr-desktop"
version = "0.6.10"
edition = "2021"

[lib]
name = "asr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
enigo = { version = "0.3", features = ["serde"] }
arboard = { version = "3", default-features = false }
hex = "0.4"
hostname = "0.4"
local-ip-address = "0.6"
mac_address = "1"
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }
sha2 = "0.10"
voice-input-bridge = { path = "../../desktop-electron/native/inject-helper" }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows = { version = "0.61", features = ["Win32_Foundation"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
