[package]
name = "voice-input-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "voice_input_bridge"
path = "src/lib.rs"

[[bin]]
name = "process-killer"
path = "src/process_killer.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_UI_Accessibility",
] }
# `windows-implement` proc-macro expands to `::windows_core::…` paths, so the
# crate must be directly importable by name.
windows-core = "=0.58.0"
windows-sys = { version = "=0.52.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }